tests/fixtures/invalid/int_div_str.py
# Cannot divide Int and Str
x: float = 1 / "hello"
